# CIS-606-001

./: .gitignore  FA25_Assignment1_Python_Fundamentals.ipynb  FA25_Assignment2_Data_Collection_and_Processing.ipynb  FA25_Lecture10_Dictionary_While.ipynb  FA25_Lecture11_While_File_Handling.ipynb  FA25_Lecture12_While_File_Handling.ipynb  FA25_Lecture14_Pandas.ipynb  FA25_Lecture15_Pandas.ipynb  FA25_Lecture17_Pandas.ipynb  FA25_Lecture18_Pandas.ipynb  FA25_Lecture3_Data_Types_Functions.ipynb  FA25_Lecture6_If_For_Loops.ipynb  FA25_Lecture7_For_Loops_2DLists.ipynb  FA25_Lecture8_2DLists_Dictionary.ipynb  FA25_Lecture9_Dictionary.ipynb  PA_FA25_Lecture11_While_FileHandling.ipynb  PA_FA25_Lecture12_While_FileHandling.ipynb  PA_FA25_Lecture14_Pandas.ipynb  PA_FA25_Lecture15_Pandas.ipynb  PA_FA25_Lecture18_Pandas.ipynb  PA_FA25_Lecture1_Notebook.ipynb  PA_FA25_Lecture3_Data_Types_Functions.ipynb  PA_FA25_Lecture4_Functions.ipynb  PA_FA25_Lecture5_Lists_If.ipynb  PA_FA25_Lecture6_If_For_Loops.ipynb  PA_FA25_Lecture7_For_Loops_2DLists.ipynb  PA_FA25_Lecture8_2DLists_Dictionary.ipynb  PA_FA25_Lecture9_Dictionary.ipynb  README.md  Week2Lecture3PA_Apiwan&Hudson-1.docx  demo.txt  pyproject.toml  sales_data.csv
.github/workflows/: codeql.yml
Assignment2/: AAPL.csv  MMM.csv
Assignment2/output/: AAPL.csv  COST.csv  CSCO.csv  CVS.csv  KMX.csv
Coding/: FA25_Assignment2_Data_Collection_and_Processing.ipynb  FA25_Lecture10_Dictionary_While.ipynb  FA25_Lecture11_While_File_Handling.ipynb  FA25_Lecture12_While_File_Handling.ipynb  FA25_Lecture14_Pandas.ipynb  FA25_Lecture15_Pandas.ipynb  FA25_Lecture17_Pandas.ipynb  FA25_Lecture18_Pandas.ipynb  FA25_Lecture3_Data_Types_Functions.ipynb  FA25_Lecture7_For_Loops_2DLists.ipynb  PA_FA25_Lecture12_While_FileHandling.ipynb  PA_FA25_Lecture14_Pandas.ipynb  PA_FA25_Lecture15_Pandas.ipynb  PA_FA25_Lecture17_Pandas.ipynb  PA_FA25_Lecture18_Pandas.ipynb  PA_FA25_Lecture1_Notebook.ipynb  PA_FA25_Lecture3_Data_Types_Functions.ipynb  PA_FA25_Lecture6_If_For_Loops.ipynb  PA_FA25_Lecture9_Dictionary.ipynb  customers_data.csv
Coding/Assignment1/: squares.pkl
Coding/Assignment2/: company_symbols.csv
Project_Management/: Lecture_18.ipynb  Lecture_19.ipynb  Lecture_20.ipynb  Week_11.ipynb  Week_12.ipynb
(+9 files in other folders)
